@@ -8,3 +8,4 @@ Lavalink/logs/spring.log
 30DayKeys.txt
 60DayKeys.txt
 90DayKeys.txt
+*.gz
