@@ -14,6 +14,11 @@ Version 1.23
 - Totally fixed $massblacklist. Now takes in a ulong[] instead of List<SocketGuildUser> 
     - This means blacklists don't have to be of people that are in the same server you execute the command from.
 - Unused $antiraid (owner only) command removed.
+- If a music player has finished playing, with no more songs in the queue, it will now automatically disconnect. (Same for music errors.)
+- $autoassign [aa] command added.
+- $autoassignremove [aar] command added.
+- $autoassignclear [aac] command added.
+- $autoassignview [aav] command added.
 
 
 Version 1.22.1
